--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,6 +1,7 @@
 .container {
     display: grid;
     min-height: 100vh;
+    min-width: 100vw;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 10% 1fr 10%;
     text-align: center;
@@ -26,6 +27,7 @@
   .subsection3,
   .subsection4 {
     background-color: rgb(254, 234, 185);
+    border-radius: 8px;
   }
   .subsection1 {
     grid-column: 1/3;
@@ -48,5 +50,6 @@
     background-color: rgb(250, 250, 250);
     padding: 10px;
     margin: 10px;
+    border-radius: 8px;
   }
   
