--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -7,6 +7,7 @@
     text-align: center;
   }
   .header {
+    height: 50px;
     background-color: rgb(224, 224, 224);
     grid-column: 1/4;
     text-align: center;
